# TCP_UDP_FILE_TRANSMIT

./: cli.c  copy.c  server  server.c  tcpcli  tcpcli.c
TCP/: CMakeLists.txt  TCPServer.c  tcpcli.c
UDP/: CMakeLists.txt  UDPServer.c  config.h  udpcli.c
